--- a/csc372-hw/hw2/pie.html
+++ b/csc372-hw/hw2/pie.html
@@ -20,7 +20,7 @@
 8 Servings</pre>
         <hr>
 
-        <h1>Ingredients</h1>
+        <h1>INGREDIENTS</h1>
 
         <ul>
             <li>cup white sugar</li>
@@ -37,7 +37,7 @@
         </ul>
         <hr>
 
-        <h1>Directions</h1>
+        <h1>DIRECTIONS</h1>
         <ol>
             <li><strong>Preheat Oven:</strong>Preheat oven to 350 degrees F (175
                 degrees C).</li>
@@ -75,7 +75,7 @@
 This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe 
 is delicious and also easy to follow; it's a piece of <s>cake</s> pie!</pre>
         <hr>
-        <h1>User Comments</h1>
+        <h1>USER COMMENTS</h1>
 
         <p id="user-comments">
             <em>This is a very fun recipe to follow, because Grandma makes
@@ -105,7 +105,7 @@ is delicious and also easy to follow; it's a piece of <s>cake</s> pie!</pre>
                 <br><br>
                 - Jean-Luc Piecard
             </em>
-            <h1>Links</h1>
+            <h1>LINKS</h1>
             <a
                 href="https://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search
                 for other lemon meringue pie recipes</a>
